log/build_2026-02-05_12-07-24/buoy_control/stderr.log
  File "/home/selqie/buoyancy/install/buoy_control/lib/python3.12/site-packages/buoy_control/button_control.py", line 78
    self.get_logger().info(f'leak status: {msg.data}'
                          ^
SyntaxError: '(' was never closed

